# jaycee-62

./: pyproject.toml
jaycee-62/: app.py  jc.py  processor.py
jaycee-62/templates/: index.html
jaycee_62/: .env  flask_jc.py  processor.py  prompt.txt
jaycee_62/static/: sample_codes.json
jaycee_62/static/css/: styles.css
jaycee_62/static/js/: frontend.js  processor.js
jaycee_62/templates/: index.html
path/to/jaycee-62/: processor.py
